# freeipa-perftest

./: .gitignore  README.md  create-test-data.py  freeipa-perftest.spec  gencerts.sh  ipaperftest.py  requirements.txt  set-password.py  setup.py
.github/workflows/: pipelines.yml
src/: Makefile.am  configure.ac  pamtest.c
src/ipaperftest/core/: __init__.py  constants.py  main.py  output.py  plugin.py
src/ipaperftest/plugins/: apitest.py  authenticationtest.py  certissuetest.py  enrollmenttest.py  groupsizetest.py  registry.py
src/ipaperftest/providers/: idmci.py  provider.py  vagrant.py
